accordion collapse fix

--- a/custom/assets/paeds/css/tailwind.css
+++ b/custom/assets/paeds/css/tailwind.css
@@ -1688,6 +1688,14 @@ video {
     left: -160%;
   }
 
+  .smLaptop\:-left-\[60\%\] {
+    left: -60%;
+  }
+
+  .smLaptop\:-left-\[45\%\] {
+    left: -45%;
+  }
+
   .smLaptop\:block {
     display: block;
   }
@@ -1878,6 +1886,26 @@ video {
     left: 8rem;
   }
 
+  .lg\:-left-\[65\%\] {
+    left: -65%;
+  }
+
+  .lg\:-left-\[70\%\] {
+    left: -70%;
+  }
+
+  .lg\:-left-\[80\%\] {
+    left: -80%;
+  }
+
+  .lg\:-left-\[78\%\] {
+    left: -78%;
+  }
+
+  .lg\:-left-\[60\%\] {
+    left: -60%;
+  }
+
   .lg\:-mb-5 {
     margin-bottom: -1.25rem;
   }
@@ -2064,5 +2092,10 @@ video {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 }
